# geoparquet-batch-writer

./: Cargo.toml  README.md
.github/workflows/: ci.yml
crates/core/: Cargo.toml
crates/core/examples/: struct_example.rs
crates/core/src/: error.rs  lib.rs
crates/core/tests/: rowdata_and_batch_writer.rs  test_no_clone.rs  test_row_struct.rs
crates/derive/: Cargo.toml
crates/derive/src/: lib.rs
crates/example-cli/: Cargo.toml
crates/example-cli/src/: main.rs
src/: main.rs  main_old.rs
