[package]
name = "geoparquet-playground"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
arrow-schema = "55.2.0"
arrow-array = "55.2.0"
clap = { version = "4.5.43", features = ["derive"] }
geo = "0.30.0"
geoarrow-array = "0.4.0"
geoarrow-schema = "0.4.0"
geoparquet = "0.4.0"
parquet = "55.2.0"
rand = "0.8"
