[package]
name = "geoparquet-batch-writer"
version = "0.1.0"
license = "MIT"
edition = "2024"
publish = true

[dependencies]
anyhow = "1"
arrow-array = "56"
arrow-schema = "56"
geo-types = "0.7"
geoarrow-array = "0.5"
geoarrow-schema = "0.5"
geoparquet = "0.5"
parquet = { version = "56", features = ["arrow"] }
geoparquet-batch-writer-derive = { path = "../derive" }

[dev-dependencies]
tempfile = "3"
