[package]
name = "geoparquet-batch-writer-derive"
description = "A library for convenient batch writing of GeoParquet files (derive macro)"
homepage = "https://github.com/KotobaMedia/geoparquet-batch-writer/"
repository = "https://github.com/KotobaMedia/geoparquet-batch-writer/"
version = "0.1.2"
license = "MIT"
edition = "2024"
publish = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
